--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: landing
 <section id="banner">
   <div class="inner">
     <h2>{{ site.title }}</h2>
-    <p>{{ site.description | markdownify }}</p>
+    <p>{%t general.save_date_message %}</p>
+    <p>{%t general.date_and_location %}</p>
+    <br>
+    <p>{%t general.more_info %}</p>
   </div>
 </section>
