--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
   Jekyll build mod
 -->
-<html>
+<html lang="en">
 
   <head>
-  <html lang="en"></html>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Antje &amp; Mouhcine</title>
   <meta name="description" content="">
   <link rel="canonical" href="http://localhost:4000/">
   <link rel="stylesheet" href="/css/main.css" />
-  <meta name="og:image" content="/images/preview.jpg">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="og:image" content="/images/preview_smaller.jpg">
   <meta name="theme-color" content="#ffffff">
 </head>
 
