--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Antje &amp; Mouhcine</title>
   <meta name="description" content="">
-  <link rel="canonical" href="http://localhost:4000/">
+  <link rel="canonical" href="https://antjeandmouhcine.wedding/">
   <link rel="stylesheet" href="/css/main.css" />
   <meta name="og:image" content="/images/preview_smaller.jpg">
   <meta name="theme-color" content="#ffffff">
