Rename preview image

--- a/de/index.html
+++ b/de/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="">
   <link rel="canonical" href="https://antjeandmouhcine.wedding/de/">
   <link rel="stylesheet" href="/css/main.css" />
-  <meta name="og:image" content="/images/preview_smaller.jpg">
+  <meta name="og:image" content="/images/preview.jpg">
   <meta name="theme-color" content="#ffffff">
 </head>
 
