Fix directory structure

--- a/it/index.html
+++ b/it/index.html
@@ -54,7 +54,7 @@
   <div class="inner">
     <h2>Antje & Mouhcine</h2>
     <p>Save the date</p>
-    <p>Amburgo - 20 Giugno 2020</p>
+    <p>Amburgo - 17 Luglio 2021</p>
     <br>
     <p>Saremo felici di festeggiare con voi. Ci saranno più informazioni con l'invito</p>
   </div>
